fix(design): fix the z-index of the submenu component

--- a/packages/design/src/components/menu/index.module.less
+++ b/packages/design/src/components/menu/index.module.less
@@ -100,6 +100,7 @@
     &-submenu {
         &-popup {
             position: absolute;
+            z-index: 1;
 
             .submenu-title-wrapper {
                 padding-right: 20px;
